--- a/src/app/components/sidenav/profile.nav.html
+++ b/src/app/components/sidenav/profile.nav.html
@@ -24,7 +24,7 @@
                     <span class="menu-title sub">Sub Categories </span>
                 </a>
             </li>
-            <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
+            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='vendors' || pageNav==='addvendors'}">
                 <a class="nav-link" routerLink="/vendors">
                     <i class="icon-people menu-icon"></i>
                     <span class="menu-title">Admin List</span>
@@ -35,11 +35,11 @@
                     <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
                     <span class="menu-title sub">Coupon Management</span>
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item" [ngClass]="{'active':pageNav==='products' || pageNav==='addproducts'}">
                 <a class="nav-link" routerLink="/prducts">
                     <i class="fa fa-product-hunt" aria-hidden="true"></i>
-                    <span class="menu-title sub">Products </span>
+                    <span class="menu-title sub">Products</span>
                 </a>
             </li>
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='banner' || pageNav==='addbanner'}">
@@ -55,12 +55,14 @@
             </li>
             <ul class="sub-menu collapse keep-inside-clicks-open'" id="banners">
                 <li routerLink="/banner" routerLinkActive='active'><a>Main Banners</a></li>
-                <li routerLink="/bestDeals" routerLinkActive='active'><a>Best Deals</a></li>
-                <!-- <li routerLink="/bestAppliances" routerLinkActive='active'><a>Best Appliances</a></li>
+                <!-- <li routerLink="/bestDeals" routerLinkActive='active'><a>Best Deals</a></li>
                 <li routerLink="/bestDiscount" routerLinkActive='active'><a>Best Discount</a></li>
-                <li routerLink="/bestBrands" routerLinkActive='active'><a>Best Brands</a></li> -->
+                <li routerLink="/bestAppliances" routerLinkActive='active'><a>Best Appliances</a></li>
+                <li routerLink="/bestDiscountAppliances" routerLinkActive='active'><a>Best Discount Appliances</a></li>
+                <li routerLink="/bestBrands" routerLinkActive='active'><a>Popular Brands</a></li> -->
             </ul>
-            <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
+
+            <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='location'}">
                 <a class="nav-link" routerLink="/location">
                     <i class="fa fa-map-marker"></i>
                     <span class="menu-title sub">Location Management</span>
@@ -100,7 +102,7 @@
                     <i class="icon-people menu-icon"></i>
                     <span class="menu-title">Loyalty Management</span>
                 </a>
-            </li>
+            </li> -->
 
             <!-- <li class="nav-item" [ngClass]="{'active':pageNav==='wholesellers' || pageNav==='addwholesellers'}">
                     <a class="nav-link" routerLink="/wholesellers">
