--- a/src/app/components/categories/add.sub.cat.html
+++ b/src/app/components/categories/add.sub.cat.html
@@ -39,12 +39,11 @@
                                             <label for="exampleInputEmail1">Sub Category Image</label>
                                             <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
                                             <div *ngIf="image">
-                                                <h4>Image:</h4>
-                                                <img src="{{image}}" alt="" width="100" height="100">
+                                                <img src="{{image}}" alt="" width="100" height="100" style="border: solid 1px;margin-top: 2%;">
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <img src="{{img}}" alt="" width="100" height="100">
+                                            <img src="{{img}}" alt="" width="100" height="100" style="border: solid 1px;margin-top: 2%;">
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Description :</label>
