--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -23,7 +23,7 @@
                                                 <div class="form-group">
                                                     <select required class="form-control border-primary" id="exampleSelectPrimary" [(ngModel)]="categoryName" name="categoryName"
                                                         (change)="changeCat($event.target.value)">
-                                                        <option hidden>Select Category</option>
+                                                        <option value="" disabled selected hidden>Select Category</option>
                                                         <option *ngFor="let cat of category" value="{{cat.name}}">{{cat.name}}</option>
                                                     </select>
                                                 </div>
@@ -34,6 +34,7 @@
                                                 <label for="firstname">Sub Category :</label>
                                                 <div class="form-group">
                                                     <select class="form-control border-primary" id="exampleSelectPrimary" [(ngModel)]="subCatName" name="subCatName" (change)="changeSubCat($event.target.value)">
+                                                        <option value="" disabled selected hidden>Select Sub Category</option>
                                                         <option *ngFor="let subCat of subCategoryName" value="{{subCat.sub_cat}}">{{subCat.sub_cat}}</option>
                                                     </select>
                                                 </div>
@@ -77,9 +78,8 @@
                                                 <label for="exampleInputEmail1">Quality Image</label>
                                                 <input class="form-control" type="file" accept="image/*" (change)="changeListener($event)">
                                                 <br>
-                                                <div *ngIf="image">
-                                                    <h4>Image:</h4>
-                                                    <img src="{{image}}" alt="" width="100" height="100">
+                                                <div *ngFor='let url of productDetails'>
+                                                    <img src="{{url.product_image}}" alt="" width="100" height="100" style="margin-right: 2%;border: 1px solid;margin-bottom:5%">
                                                 </div>
                                             </div>
                                         </div>
@@ -189,72 +189,77 @@
                                                 </label>
                                             </div>
                                             <div class="" *ngFor="let skuValues of skusData;let i= index" style="margin-bottom:30px;">
-                                                <div class="row">
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <input id="category" class="form-control" type="text" placeholder="Size" [(ngModel)]="skuValues.size" [ngModelOptions]="{standalone:true}"
-                                                            />
+                                                <div class="">
+                                                    <div class="">
+                                                        <div class="row">
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
+                                                                    <input id="category" class="form-control" type="text" placeholder="Size" [(ngModel)]="skuValues.size" [ngModelOptions]="{standalone:true}"
+                                                                    />
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
+                                                                    <input id="category" class="form-control" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57"
+                                                                        min='0' max='10' type="number" placeholder="Quantity"
+                                                                        [(ngModel)]="skuValues.quantity" [ngModelOptions]="{standalone:true}">
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
+                                                                    <input id="category" class="form-control" type="text" placeholder="Actual Price" [(ngModel)]="skuValues.mrp" [ngModelOptions]="{standalone:true}"
+                                                                    />
+                                                                </div>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <input id="category" class="form-control" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57"
-                                                                min='0' max='10' type="number" placeholder="Quantity" [(ngModel)]="skuValues.quantity"
-                                                                [ngModelOptions]="{standalone:true}">
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <input id="category" class="form-control" type="text" placeholder="Actual Price" [(ngModel)]="skuValues.mrp" [ngModelOptions]="{standalone:true}"
-                                                            />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <input id="category" class="form-control" type="text" placeholder="Offer Price" [(ngModel)]="skuValues.offer" [ngModelOptions]="{standalone:true}"
-                                                            />
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
+                                                        <div class="row">
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
+                                                                    <input id="category" class="form-control" type="text" placeholder="Offer Price" [(ngModel)]="skuValues.offer" [ngModelOptions]="{standalone:true}"
+                                                                    />
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
 
-                                                            <input id="category" class="form-control" type="text" placeholder="Selling Price" [(ngModel)]="skuValues.sellingPrice" [ngModelOptions]="{standalone:true}"
-                                                            />
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
+                                                                    <input id="category" class="form-control" type="text" placeholder="Selling Price" [(ngModel)]="skuValues.sellingPrice" [ngModelOptions]="{standalone:true}"
+                                                                    />
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
 
-                                                            <input id="category" class="form-control" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57"
-                                                                type="text" placeholder="Stock" min='0' max='20' type="number"
-                                                                [(ngModel)]="skuValues.stock" [ngModelOptions]="{standalone:true}"
-                                                            />
+                                                                    <input id="category" class="form-control" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57"
+                                                                        type="text" placeholder="Stock" min='0' max='20' type="number"
+                                                                        [(ngModel)]="skuValues.stock" [ngModelOptions]="{standalone:true}"
+                                                                    />
+                                                                </div>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <label for="exampleInputEmail1">Sku Images : </label>
+                                                        <div class="row">
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
+                                                                    <label for="exampleInputEmail1">Sku Images : </label>
 
-                                                            <input class="form-control" type='file' accept="img1/*" (change)="onSelectFile1($event,i)" multiple>
+                                                                    <input class="form-control" type='file' accept="img1/*" (change)="onSelectFile1($event,i)" multiple>
 
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <label for="exampleInputEmail2">Veg or nonVeg : </label>
-                                                            <input class="form-control" type="file" accept="image1/*" (change)="changeListener1($event,i)">
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
+                                                                    <label for="exampleInputEmail2">Veg or nonVeg (Optional)
+                                                                        : </label>
+                                                                    <input class="form-control" type="file" accept="image1/*" (change)="changeListener1($event,i)">
 
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <div class="form-group">
-                                                            <button type="submit" class="btn btn-primary vendor-button" (click)="deleteSku(i)" style="margin-top:40px">Delete
-                                                                Sku
-                                                            </button>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4">
+                                                                <div class="form-group">
+                                                                    <button type="submit" class="btn btn-primary vendor-button" (click)="deleteSku(i)" style="margin-top:40px">Delete
+                                                                        Sku
+                                                                    </button>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
