--- a/src/app/components/sidenav/profile.nav.css
+++ b/src/app/components/sidenav/profile.nav.css
@@ -30,7 +30,10 @@
     font-size: 20px;
     padding-right: 24px;
 }
-
+.menu-content{
+    margin-bottom: 17%!important;
+    padding-bottom: 12%!important;
+}
 /* sidenav */
 .nav-side-menu {
     overflow: auto;
