--- a/src/app/components/products/add.product.html
+++ b/src/app/components/products/add.product.html
@@ -93,6 +93,21 @@
                                     <div class="row">
                                         <div class="col-md-4 col-sm-4">
                                             <div class="form-group">
+                                                <h6>Select Delivery Options</h6>
+                                                <div class="margin" *ngFor="let item of list">
+
+                                                    <label>
+                                                        <input type="checkbox" name="options" value="{{item}}" [checked]="list.indexOf(item) == 0" [disabled]="list.indexOf(item) == 0"
+                                                            (click)="checkbox($event.target.checked,item.id,item)" />                                                        &nbsp;{{item.title}}
+                                                        {{option}}
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="row">
+                                        <div class="col-md-4 col-sm-4">
+                                            <div class="form-group">
                                                 <label for="firstname" name="prodName">Actual Price :</label>
                                                 <input id="category" class="form-control" name="actual" type="text" [(ngModel)]="actualPrice" />
                                             </div>
@@ -122,34 +137,9 @@
                                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="disAmount" name="disAmount">
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <label for="firstname">Product Details :</label>
-                                                <br />
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="Description" name="Description">
-                                                    </textarea>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <label for="firstname">Specifications : </label>
-                                                <br />
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="specification" name="specification">
-                                                   </textarea>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group">
-                                                <label for="firstname">Terms & Conditions</label>
-                                                <br />
-                                                <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="terms" name="terms">
-                                                   </textarea>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
+                                    </div> -->
+
+                                    <!-- <div class="row">
                                         <div class="col-md-4 col-sm-4">
                                             <div class="form-group">
                                                 <h6 for="firstname">FAQs : </h6>
@@ -166,21 +156,8 @@
                                                     </textarea>
                                             </div>
                                         </div>
-                                        <div class="col-md-4 col-sm-4">
-                                            <div class="form-group" style="margin-top: 50px;
-                                            margin-left: 20px;">
-                                                <h6>Select Delivery Options</h6>
-                                                <div class="margin" *ngFor="let item of list">
 
-                                                    <label>
-                                                        <input type="checkbox" name="options" value="{{item}}" [checked]="list.indexOf(item) == 0" [disabled]="list.indexOf(item) == 0"
-                                                            (click)="checkbox($event.target.checked,item.id,item)" />                                                        &nbsp;{{item.title}}
-                                                        {{option}}
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    </div> -->
                                     <div class="row">
                                         <div class="col-md-12 col-sm-12">
                                             <div class="form-group" style="margin-top:20px;margin-bottom:25px;">
@@ -233,6 +210,32 @@
                                                                         type="text" placeholder="Stock" min='0' max='20' type="number"
                                                                         [(ngModel)]="skuValues.stock" [ngModelOptions]="{standalone:true}"
                                                                     />
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <label for="firstname">Product Details :</label>
+                                                                    <br />
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="Description" name="Description">
+                                                    </textarea>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <label for="firstname">Specifications : </label>
+                                                                    <br />
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="specification" name="specification">
+                                                   </textarea>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-4 col-sm-4">
+                                                                <div class="form-group">
+                                                                    <label for="firstname">Terms & Conditions</label>
+                                                                    <br />
+                                                                    <textarea class="form-control" rows="4" cols="50" style="width: 100%;border: 1px solid;" [(ngModel)]="terms" name="terms">
+                                                   </textarea>
                                                                 </div>
                                                             </div>
                                                         </div>
