--- a/src/app/components/sidenav/logo.nav.html
+++ b/src/app/components/sidenav/logo.nav.html
@@ -11,14 +11,25 @@
             <!-- <img src="assets/images/logo-mini.png" alt="logo" /> -->
         </a>
     </div>
-    <div class="navbar-menu-wrapper d-flex align-items-center">
-        <!-- <button class="navbar-toggler align-self-center" type="button" data-toggle="minimize">
+    <!-- <div class="navbar-menu-wrapper d-flex align-items-center">
+        <button class="navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="icon-menu"></span>
-        </button> -->
+        </button>
         <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item nav-settings d-none d-lg-block">
                 <img routerLink="/" class="logout" src="/assets/images/logout.jpg">
             </li>
         </ul>
-    </div>
+    </div> -->
+    <ul class="navbar-nav navbar-nav-right">
+        <li class="nav-item nav-settings d-none d-lg-block"><a>
+                <img href="#" class="logout" src="/assets/images/logout.jpg"></a>
+            <ul class="dropdown-menu">
+                <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
+                <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
+                <li class="divider"></li>
+                <li><a routerLink="/"><i class="icon-off"></i> Logout</a></li>
+            </ul>
+        </li>
+    </ul>
 </nav>
